--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-cors-headers==4.6.0
 django-extensions==3.2.3
 django-oauth-toolkit==3.0.1
 django-rest-framework-social-oauth2==1.2.0
+django-sesame==3.2.2
 django-tenants==3.7.0
 django-timezone-field==7.0
 djangorestframework==3.15.2
