--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ djangoviz==0.1.1
 djoser==2.3.1
 drf-social-oauth2==3.1.0
 graphqlclient==0.2.4
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -43,12 +44,14 @@ kombu==5.4.2
 oauth2_provider==0.0
 oauthlib==3.2.2
 openai==1.59.6
+packaging==24.2
 pillow==11.1.0
 prompt_toolkit==3.0.48
 psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.10.5
 pydantic_core==2.27.2
+pygraphviz==1.14
 PyJWT==2.10.1
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
@@ -73,5 +76,7 @@ tweepy==4.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
+uvicorn==0.34.0
 vine==5.1.0
 wcwidth==0.2.13
+whitenoise==6.8.2
