--- a/requirements.txt
+++ b/requirements.txt
@@ -48,8 +48,12 @@ openai==1.59.6
 packaging==24.2
 pillow==11.1.0
 prompt_toolkit==3.0.48
+psycopg==3.2.4
 psycopg2-binary==2.9.10
 pycparser==2.22
+pydantic==2.10.5
+pydantic_core==2.27.2
+pygraphviz==1.14
 PyJWT==2.10.1
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
