--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 cron-descriptor==1.4.5
-cryptography==44.0.1
+cryptography==44.0.0
 defusedxml==0.8.0rc2
 distro==1.9.0
 dj-database-url==2.3.0
@@ -20,6 +20,7 @@ Django==5.1.6
 django-admin-interface==0.29.3
 django-background-tasks==1.2.8
 django-celery-beat==2.7.0
+django-celery-results==2.5.1
 django-colorfield==0.11.0
 django-cors-headers==4.6.0
 django-extensions==3.2.3
@@ -51,6 +52,9 @@ prompt_toolkit==3.0.48
 psycopg==3.2.4
 psycopg2-binary==2.9.10
 pycparser==2.22
+pydantic==2.10.5
+pydantic_core==2.27.2
+pygraphviz==1.14
 PyJWT==2.10.1
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
