--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.8.0
+APScheduler==3.11.0
+arrow==1.3.0
 asgiref==3.8.1
 billiard==4.2.1
+blessed==1.20.0
 celery==5.4.0
 certifi==2024.12.14
 cffi==1.17.1
@@ -25,6 +28,7 @@ django-colorfield==0.11.0
 django-cors-headers==4.6.0
 django-extensions==3.2.3
 django-oauth-toolkit==3.0.1
+django-picklefield==3.2
 django-rest-framework-social-oauth2==1.2.0
 django-sesame==3.2.2
 django-tenants==3.7.0
@@ -61,7 +65,7 @@ python-dotenv==1.0.1
 python-slugify==8.0.4
 python3-openid==3.2.0
 PyTweet==1.3.6
-redis==5.2.1
+redis==3.5.3
 requests==2.32.3
 requests-oauthlib==1.3.1
 setuptools==75.8.0
@@ -75,8 +79,10 @@ stripe==11.4.1
 text-unidecode==1.3
 tqdm==4.67.1
 tweepy==4.9.0
+types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2024.2
+tzlocal==5.3
 urllib3==2.3.0
 uvicorn==0.34.0
 vine==5.1.0
