--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ arrow==1.3.0
 asgiref==3.8.1
 billiard==4.2.1
 blessed==1.20.0
+cachetools==5.5.2
 celery==5.4.0
 certifi==2024.12.14
 cffi==1.17.1
@@ -21,6 +22,7 @@ distro==1.9.0
 dj-database-url==2.3.0
 Django==5.1.7
 django-admin-interface==0.29.3
+django-anymail==12.0
 django-background-tasks==1.2.8
 django-celery-beat==2.7.0
 django-celery-results==2.5.1
@@ -38,6 +40,8 @@ djangorestframework_simplejwt==5.4.0
 djangoviz==0.1.1
 djoser==2.3.1
 drf-social-oauth2==3.1.0
+google-auth==2.38.0
+google-genai==1.4.0
 graphqlclient==0.2.4
 gunicorn==23.0.0
 h11==0.14.0
@@ -55,6 +59,8 @@ pillow==11.1.0
 prompt_toolkit==3.0.48
 psycopg==3.2.4
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 PyJWT==2.10.1
 python-crontab==3.2.0
@@ -66,8 +72,10 @@ PyTweet==1.3.6
 redis==3.5.3
 requests==2.32.3
 requests-oauthlib==1.3.1
+rsa==4.9
 sentry-sdk==2.22.0
 setuptools==75.8.0
+sib-api-v3-sdk==7.6.0
 six==1.17.0
 sniffio==1.3.1
 social-auth-app-django==5.4.2
@@ -86,4 +94,5 @@ urllib3==2.3.0
 uvicorn==0.34.0
 vine==5.1.0
 wcwidth==0.2.13
+websockets==14.2
 whitenoise==6.8.2
