--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ django-rest-framework-social-oauth2==1.2.0
 django-sesame==3.2.2
 django-tenants==3.7.0
 django-timezone-field==7.0
+django-unfold==0.50.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 djangoviz==0.1.1
@@ -55,6 +56,7 @@ oauth2_provider==0.0
 oauthlib==3.2.2
 openai==1.59.6
 packaging==24.2
+paddle-python-sdk==1.6.0
 pillow==11.1.0
 prompt_toolkit==3.0.48
 psycopg==3.2.4
