chore: upgraded packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.8.0
 APScheduler==3.11.0
 arrow==1.3.0
 asgiref==3.8.1
+attrs==25.3.0
 billiard==4.2.1
 blessed==1.20.0
 cachetools==5.5.2
@@ -20,11 +24,11 @@ cryptography==44.0.1
 defusedxml==0.8.0rc2
 distro==1.9.0
 dj-database-url==2.3.0
-Django==5.1.7
+Django==5.2.4
 django-admin-interface==0.29.3
 django-anymail==12.0
 django-background-tasks==1.2.8
-django-celery-beat==2.7.0
+django-celery-beat==2.8.1
 django-celery-results==2.5.1
 django-colorfield==0.11.0
 django-cors-headers==4.6.0
@@ -33,7 +37,7 @@ django-oauth-toolkit==3.0.1
 django-picklefield==3.2
 django-rest-framework-social-oauth2==1.2.0
 django-sesame==3.2.2
-django-tenants==3.7.0
+django-tenants==3.8.0
 django-timezone-field==7.0
 django-unfold==0.50.0
 djangorestframework==3.15.2
@@ -41,6 +45,9 @@ djangorestframework_simplejwt==5.4.0
 djangoviz==0.1.1
 djoser==2.3.1
 drf-social-oauth2==3.1.0
+eval_type_backport==0.2.2
+filelock==3.18.0
+frozenlist==1.6.0
 google-auth==2.38.0
 google-genai==1.4.0
 graphqlclient==0.2.4
@@ -52,6 +59,10 @@ idna==3.10
 jiter==0.8.2
 jwcrypto==1.5.6
 kombu==5.4.2
+markdown-it-py==3.0.0
+mdurl==0.1.2
+multidict==6.4.3
+numpy==2.2.5
 oauth2_provider==0.0
 oauthlib==3.2.2
 openai==1.59.6
@@ -59,11 +70,16 @@ packaging==24.2
 paddle-python-sdk==1.6.0
 pillow==11.1.0
 prompt_toolkit==3.0.48
+propcache==0.3.1
 psycopg==3.2.4
 psycopg2-binary==2.9.10
+pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
+Pygments==2.19.1
 PyJWT==2.10.1
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
@@ -74,9 +90,11 @@ PyTweet==1.3.6
 redis==3.5.3
 requests==2.32.4
 requests-oauthlib==1.3.1
+rich==14.0.0
 rsa==4.9
 sentry-sdk==2.22.0
 setuptools==78.1.1
+shellingham==1.5.4
 sib-api-v3-sdk==7.6.0
 six==1.17.0
 sniffio==1.3.1
@@ -85,9 +103,12 @@ social-auth-core==4.5.4
 sqlparse==0.5.3
 standard-imghdr==3.13.0
 stripe==11.4.1
+tabulate==0.9.0
 text-unidecode==1.3
+together==1.5.8
 tqdm==4.67.1
 tweepy==4.9.0
+typer==0.15.4
 types-python-dateutil==2.9.0.20241206
 typing-inspection==0.4.0
 typing_extensions==4.12.2
@@ -99,3 +120,4 @@ vine==5.1.0
 wcwidth==0.2.13
 websockets==14.2
 whitenoise==6.8.2
+yarl==1.20.0
